src/test/deca/syntax/invalid/intermediaire2/arithmetiques/03timesIncomplete.deca
// Description:
//    tests de programme incorrect lexicalement (operation sans operande de gauche)
//
// Resultats:
//  03timesIncomplete.deca:12:8:
//
// Historique:
//    cree le 16/06/2022

{
    int x;
    x = * 1;
}
